# ai-fullstack-template

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
api/app/: config.py  logger.py  security.py
api/app/prompts/: system_prompts.py
api/app/repositories/: llm_repository.py  session_repository.py
api/app/routers/: api.py  chat.py  models.py  ping.py  settings.py
api/app/schema/: requests.py  responses.py
api/app/services/: chat_service.py
api/tests/: conftest.py  test_auth.py  test_chat.py  test_ping.py
docs/: AGENTS.md  README.md  onboarding.md
docs/conventions/: README.md  code-style.md  configuration.md  frontend.md  git-workflow.md  llm-usage.md  logging.md  repositories.md  routers.md  testing.md  work-protocol.md
docs/decisions/: 0001-provider-agnostic-llm-client.md  0002-server-side-session-history.md  0003-optional-api-key-auth.md  0004-uv-and-pydantic-settings.md  README.md
docs/infrastructure/: README.md  ci-cd.md  containers.md  deployment.md  observability.md
docs/patterns/: README.md  postgres-session-repository.md  redis-session-repository.md  vector-store-repository.md
docs/services/: README.md  _template.md  api.md  example-rag-api.md  example-worker.md  ui.md
ui/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: Sidebar.tsx
ui/src/lib/: api.ts  apiConfig.ts  site.ts
ui/src/pages/: About.tsx  Chatbot.tsx
(+1 files in other folders)
