[project]
name = "ai-template-api"
version = "0.1.0"
description = "FastAPI service template with a provider-agnostic LLM client"
authors = [
    { name = "Guy Frishman" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "openai>=1.40.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
